@@ -202,7 +202,7 @@ public class DefinedSymbolsHandler implements SMTHandler {
 
     @Override
     public List<SMTHandlerProperty<?>> getProperties() {
-        return Arrays.asList(PROPERTY_AXIOMATISATION);
+        return List.of(PROPERTY_AXIOMATISATION);
     }
 
     private void handleTacletAxioms(String name, MasterHandler trans)
@@ -247,7 +247,6 @@ public class DefinedSymbolsHandler implements SMTHandler {
                     new AbbrevMap());
                 trans.addAxiom(SExprs.assertion(trans.translate(axiom)));
             } catch (ParserException e) {
-                e.printStackTrace();
                 throw new SMTTranslationException("Error while translating snippet " + snipName, e);
             }
             snipName = name + DL_SUFFIX + "." + cnt;
